Notebook - Limit size of user inputs